# ShoppingListAgent

./: .gitignore  Cargo.toml  note.md  shopping.db
src/: main.rs  openrouter.rs  tools.rs
